feat: exclude fields work
