# src/lookupTables/models/lookupTablesManager.ts
@@ -1,5 +1,6 @@
 import fs from 'fs';
 import path from 'path';
+import _ from 'lodash';
 import { Logger } from '@map-colonies/js-logger';
 import { inject, injectable } from 'tsyringe';
 import { SERVICES } from '../../common/constants';
@@ -12,19 +13,37 @@ const JSON_EXTENSION = ".json";
 export class LookupTablesManager {
   public constructor(@inject(SERVICES.LOGGER) private readonly logger: Logger) { }
 
-  public getLookupData(lookupKey: string): ILookupOption[] {
+  public getLookupData(lookupKey: string, excludeFields: string[] = []): ILookupOption[] {
     this.logger.debug({ msg: 'get lookup data' });
     const filePath = path.join(ASSETS_FOLDER_PATH, `${lookupKey}${JSON_EXTENSION}`);
-    const lookupOptionList: ILookupOption[] = this.readListFromFile(filePath);
-    return lookupOptionList;
+    let lookupOptionList: ILookupOption[];
+    
+    try {
+      lookupOptionList = this.readListFromFile(filePath);
+    } catch (error) {
+      throw new Error('Incorrect lookupKey, no data found');
+    }
+    
+    const filteredLookupOptions: ILookupOption[] = this.filterLookupOption(lookupOptionList, excludeFields);
+    return filteredLookupOptions;
   }
 
   public getCapabilities(): string[] {
     this.logger.debug({ msg: 'get capabilities list' });
     const files = fs.readdirSync(ASSETS_FOLDER_PATH);
     const assetsFileNames = files.map(folder => folder.split(JSON_EXTENSION)[0]);
-    
+
     return assetsFileNames;
+  }
+
+  private filterLookupOption(lookupOptionList: ILookupOption[], excludeFields: string[]): ILookupOption[] {
+    for (const option of lookupOptionList) {
+      for (const field of excludeFields) {
+        _.unset(option, field);
+      }
+    }
+
+    return lookupOptionList;
   }
 
   private readListFromFile<T>(filePath: string): T[] {
